Add alice launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Crypto",
             "type": "python",
@@ -17,6 +16,13 @@
             "type": "python",
             "request": "launch",
             "program": "bob.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Alice",
+            "type": "python",
+            "request": "launch",
+            "program": "alice.py",
             "console": "integratedTerminal"
         }
     ]
